--- a/index.html
+++ b/index.html
@@ -1,35 +1,95 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Venda de Bilhetes</title>
-  <link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="~/Guiao-w0/styles/main.css">
+	<title>Loja de Bilhetes</title>
 </head>
+<style>
+	body{
+		width: 100%;
+		height: 100%;
+	}
+	.menu-principal{
+	width: 100%;
+	background-color: #252323;
+	height: 60px;
+	}
+	main{
+	margin: 0 auto;
+	width: 980px;
+	position: relativa;
+	}
+	.logo{
+	float: left;
+		padding:16px;
+		width:50%;
+	}
+	
+	header-2{
+	background-color: #ffffff;
+	width: 980px;
+	margin: 0 auto;
+	padding:16px;
+	}
+	
+	.menu ul li{
+	display: inline-block;
+	color: #8b8b8b;
+	margin-left: 10px;
+	}
+	
+	.menu ul li a{
+	color: #8b8b8b;
+	text-decoration: none;
+	font-size: 30px;
+	}
+	
+	.menu{
+	width:70%;
+	float:left;
+	}
+
+	.busca{
+	width:30%;
+	float:right;
+	}
+</style>
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Registrar</a></li>
-      </ul>
-    </nav>
-  </header>
-
-  <main>
-    <h1>Bem-vindo à Venda de Bilhetes</h1>
-    <p>Compre seus bilhetes para os melhores eventos aqui!</p>
-    <div class="ticket-list">
-      <div class="ticket">
-        <img src="https://via.placeholder.com/150" alt="Evento 1">
-        <h2>Evento 1</h2>
-        <p>Descrição do evento 1.</p>
-        <a href="tickets.html">Comprar Bilhete</a>
-      </div>
-      <!-- Mais bilhetes podem ser adicionados aqui -->
-    </div>
-  </main>
+	<header class="menu-principal">
+		<div class="header-1">
+			<div class="logo">
+				<img src="~/Guiao-w0/images/logo.png "/> 
+			</div>
+		</div>
+	
+	</header>
+	<main>
+	<div class="header-2">
+		<div class="menu">
+			<ul>
+				<li>
+					<a href="">Home</a>
+				</li>
+				<li>
+					<a href="">About Us</a>
+				</li>
+				<li>
+					<a href="">Service</a>
+				</li>
+				<li>
+					<a href="">Pages</a>
+				</li>
+				<li>
+					<a href="">Contact Us</a>
+				</li>
+			</ul>
+		</div>	
+		<div class="pesquiça">
+			<input type="text"/>
+		</div>	
+	</div>
+	</main>
 </body>
-</html>
 
+</html>
