--- a/login.html
+++ b/login.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Login</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="./Guiao-w0/styles/main.css">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index1.html">Home</a></li>
         <li><a href="login.html">Login</a></li>
         <li><a href="register.html">Registrar</a></li>
       </ul>
