--- a/resgister.html
+++ b/resgister.html
@@ -4,33 +4,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Registrar</title>
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" type="text/css" href="./Guiao-w0/styles/main.css">
 </head>
 <body>
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
-        <li><a href="login.html">Login</a></li>
-        <li><a href="register.html">Registrar</a></li>
+        <li><a href="./Guiao-w0/index1.html">Home</a></li>
+        <li><a href="./Guiao-w0/login.html">Login</a></li>
+        <li><a href="./Guiao-w0/register.html">Registrar</a></li>
       </ul>
     </nav>
   </header>
 
   <main>
     <h2>Registrar</h2>
-    <form id="registerForm">
+    <form id="registerForm" method="post" action="/submit_registration">
       <div class="form-group">
         <label for="name">Nome:</label>
-        <input type="text" id="name" required>
+        <input type="text" id="name" name="name" required>
       </div>
       <div class="form-group">
         <label for="email">Email:</label>
-        <input type="email" id="email" required>
+        <input type="email" id="email" name="email" required>
       </div>
       <div class="form-group">
         <label for="password">Senha:</label>
-        <input type="password" id="password" required>
+        <input type="password" id="password" name="password" required>
       </div>
       <button type="submit">Registrar</button>
     </form>
@@ -40,4 +40,5 @@
   <script src="js/main.js"></script>
 </body>
 </html>
+
 
