--- a/tickets.html
+++ b/tickets.html
@@ -10,7 +10,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="index.html">Home</a></li>
+        <li><a href="index1.html">Home</a></li>
         <li><a href="login.html">Login</a></li>
         <li><a href="register.html">Registrar</a></li>
       </ul>
@@ -29,8 +29,10 @@
         </select>
       </div>
       <div class="form-group">
-        <label for="quantity">Quantidade:</label>
-        <input type="number" id="quantity" min="1" required>
+      	<p><label for="quantity">Preço:</label>
+        <input type="number" id="quantity" min="1" required></p>
+        <p><label for="quantity">Quantidade:</label>
+        <input type="number" id="quantity" min="1" required></p>
       </div>
       <button type="submit">Comprar</button>
     </form>
