Site com paginas

--- a/index1.html
+++ b/index1.html
@@ -34,18 +34,6 @@
             width: 70%;
         }
 
-        .redes-sociais ul li {
-            margin-left: 25px;
-            display: inline-block;
-            float: left;
-            list-style: none;
-        }
-
-        .redes-sociais {
-            width: 25%;
-            float: right;
-        }
-
         .header-2 {
             background-color: #ffffff;
             width: 980px;
@@ -353,16 +341,13 @@
                         <a href="">Home</a>
                     </li>
                     <li>
-                        <a href="">About Us</a>
-                    </li>
-                    <li>
-                        <a href="">Service</a>
-                    </li>
-                    <li>
-                        <a href="">Pages</a>
+                        <a href="tickets.html">Bilhetes</a>
                     </li>
                     <li>
                         <a href="">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="login.html">Login</a>
                     </li>
                 </ul>
             </div>
@@ -459,32 +444,28 @@
             <div class="content">
                 <div class="col-4">
                     <h3><b>Populr Post</b></h3>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                    <p class="clock">25-September 2013</p>
-                    <p>Lorem Ipsum is simply dummy text of the printing.</p>
-                    <p class="clock">25-September 2013</p>
+                    <p>informaçao desse post</p>
+                    <p class="clock">data</p>
+                    <p>dasda.</p>
+                    <p class="clock">data</p>
                 </div>
                 <div class="col-4">
-                    <h3><b>Tags</b></h3>
-                    <p>apps blog blogroll christmas cms coda concert daily design develop dialog drinks envato food fun gallery gift holiday icon illustration ipad iphone journal jquery label link marketing mobile motion music photo profession quotation recipes show sound strategy tv typography video</p>
+                    <h3><b>about us</b></h3>
+                    <p>Informação sobre nos</p>
                 </div>
                 <div class="col-4">
-                    <h3><b>A little about us</b></h3>
-                    <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. If you are going to use a passage of Lorem Ipsum, you need to be sure there isn't anything.</p>
-                </div>
-                <div class="col-4">
-                    <h3><b>Get in touch</b></h3>
-                    <p>Lorem Ipsum is simply dummy of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since.</p>
-                    <p class="local">Texas, US</p>
-                    <p class="emailico">email@email.com</p>
-                    <p class="telefoneico">890-09880-45590</p>
+                    <h3><b>Contact us</b></h3>
+                    <p>informaçao</p>
+                    <p class="local">Porto, Portugal</p>
+                    <p class="emailico">Email</p>
+                    <p class="telefoneico">Numero de telefone</p>
                 </div>
             </div>
         </div>
     </footer>
     <div class="col-100 footer-2">
         <div class="content">
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered</p>
+            <p>colocar informaçao</p>
         </div>
     </div>
     <script type="text/javascript" src="./js/jquery.js"></script>
