--- a/register.html
+++ b/register.html
@@ -10,9 +10,9 @@
   <header>
     <nav>
       <ul>
-        <li><a href="./Guiao-w0/index1.html">Home</a></li>
-        <li><a href="./Guiao-w0/login.html">Login</a></li>
-        <li><a href="./Guiao-w0/register.html">Registrar</a></li>
+        <li><a href="index1.html">Home</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="register.html">Registrar</a></li>
       </ul>
     </nav>
   </header>
