--- a/tickets.html
+++ b/tickets.html
@@ -7,108 +7,353 @@
   <link rel="stylesheet" href="css/styles.css">
   <style>
     body {
-      width: 100%;
-      height: 100%;
-      margin: 0 auto;
+        width: 100%;
+        height: 100%;
+        margin: 0 auto;
     }
+
     ul {
-      padding: 0px !important;
+        padding: 0px !important;
     }
+
     .menu-principal {
-      width: 100%;
-      background-color: #252323;
-      height: 60px;
+        width: 100%;
+        background-color: #252323;
+        height: 120px;
     }
+
     main, .content {
-      margin: 0 auto;
-      width: 980px;
-      position: relative;
+        margin: 0 auto;
+        width: 980px;
+        position: relative;
     }
+
     .logo {
-      float: left;
-      padding: 16px;
-      width: 70%;
+        float: left;
+        width: 70%;
     }
+
     .header-2 {
-      background-color: #ffffff;
-      width: 980px;
-      margin: 0 auto;
-      padding: 16px;
+        background-color: #ffffff;
+        width: 980px;
+        margin: 0 auto;
+        padding: 16px;
     }
+
     .menu-urls {
-      height: 80px;
-      border-bottom: 3px solid #efefef;
+        height: 80px;
+        border-bottom: 3px solid #efefef;
     }
+
     .menu ul li {
-      display: inline-block;
-      color: #8b8b8b;
-      margin-left: 15px;
-      height: 50px;
+        display: inline-block;
+        color: #8b8b8b;
+        margin-left: 15px;
+        height: 50px;
     }
+
     .menu ul li:hover {
-      border-bottom: 3px solid #00bac6;
+        border-bottom: 3px solid #00bac6;
     }
+
     .menu ul li a:hover {
-      color: #00bac6;
+        color: #00bac6;
     }
+
     .menu ul li a {
-      color: #8b8b8b;
-      text-decoration: none;
-      font-size: 18px;
-      text-transform: uppercase;
+        color: #8b8b8b;
+        text-decoration: none;
+        font-size: 18px;
+        text-transform: uppercase;
     }
+
     .menu {
-      width: 70%;
-      float: left;
+        width: 70%;
+        float: left;
     }
+
     .busca {
-      text-align: center;
-      width: 30%;
-      float: right;
+        text-align: center;
+        width: 30%;
+        float: right;
     }
+
     .busca input {
-      background-image: url(../img/icone-search.png);
-      background-repeat: no-repeat;
-      height: 36px;
-      padding: 12px;
-      width: 190px;
-      margin-top: 10px;
-      background-position: 96%;
-      border: 1px solid #d6d6d6;
+        background-image: url(../img/icone-search.png);
+        background-repeat: no-repeat;
+        height: 36px;
+        padding: 8px;
+        width: 190px;
+        margin-top: 10px;
+        background-position: 96%;
+        border: 1px solid #d6d6d6;
     }
+
     .col-100 {
-      width: 100%;
-      float: left;
-      position: relative;
+        width: 100%;
+        float: left;
+        position: relative;
     }
+
+    button.slick-prev {
+        font-size: 0px;
+        border: none;
+        width: 25px;
+        height: 51px;
+        z-index: 9;
+        background-color: transparent;
+        position: absolute;
+        background-image: url(../img/anterior.png);
+        top: 35%;
+        left: 14%;
+    }
+
+    button.slick-next {
+        font-size: 0px;
+        border: none;
+        width: 25px;
+        height: 51px;
+        z-index: 9;
+        background-color: transparent;
+        position: absolute;
+        background-image: url(../img/proximo.png);
+        top: 35%;
+        right: 14%;
+    }
+
+    .slick-list {
+        width: 100% !important;
+    }
+
+    .slick-initialized {
+        overflow: hidden;
+    }
+
+    .slick-dots li button {
+        font-size: 0px;
+        border: 5px solid #ffffff;
+        width: 26px;
+        height: 26px;
+        background: transparent;
+        border-radius: 50%;
+        cursor: pointer;
+    }
+
+    .slick-dots {
+        margin: 0 auto;
+        width: 50%;
+        position: absolute;
+        left: 50%;
+        top: 600px;
+    }
+
+    li.slick-active button {
+        background: #00bac6;
+    }
+
+    .slick-dots li {
+        padding-left: 10px;
+        display: inline-block;
+    }
+
+    .texto-destaque {
+        text-align: center;
+    }
+
+    .texto-destaque strong {
+        color: #646464;
+    }
+
+    .texto-destaque h1 {
+        text-transform: uppercase;
+        font-size: 30px;
+        color: #818181;
+    }
+
+    .texto-destaque p {
+        font-size: 15px;
+        color: #9a9a9a;
+    }
+
+    .col-3 {
+        text-align: center;
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 29%;
+        float: left;
+        position: relative;
+    }
+
+    .bloco-imagem img {
+        margin: 0 auto;
+        width: 100%;
+        height: auto;
+    }
+
+    .bloco-imagem {
+        height: 300px;
+        border: 1px solid #c5c5c5;
+        padding-top: 15px;
+        padding-bottom: 15px;
+        margin-left: 10px;
+    }
+
+    .bloco-imagem b, p {
+        text-align: left;
+    }
+
+    .bloco-texto {
+        margin-top: 3em;
+    }
+
+    h3 {
+        font-weight: normal !important;
+    }
+
+    .bloco-imagens-texto {
+        background-color: #eeeeee;
+    }
+
+    .bloco-imagens-texto:before {
+        width: 100%;
+        display: inline-block;
+        content: '';
+        height: 52px;
+        background: #ffffff;
+        background-image: url('../img/setinha.png');
+        background-repeat: no-repeat;
+        background-position: center;
+    }
+
+    .bloco-imagens-texto:after {
+        width: 100%;
+        display: inline-block;
+        content: '';
+        height: 70px;
+        background: #eeeeee;
+    }
+
+    .col-4 {
+        float: left;
+        width: 25%;
+        text-align: center;
+    }
+
+    .col-4 img {
+        cursor: pointer;
+        margin: 0 auto;
+        padding-top: 1em;
+        vertical-align: middle;
+    }
+
+    .col-4 img:hover {
+        margin-top: 10px !important;
+        position: relative !important;
+    }
+
+    .bloco-logos {
+        height: 170px;
+    }
+
+    .bloco-logos img {
+        margin-top: 50px;
+    }
+
+    .footer h3 {
+        text-align: left;
+    }
+
+    .footer {
+        background-image: url('../img/footer.png');
+        color: #ffffff;
+    }
+
+    .footer-2 {
+        background-image: url('../img/footer2.png');
+        color: #c1c1c1;
+        height: 90px;
+    }
+
+    .footer p {
+        width: 90%;
+        text-align: left;
+    }
+
+    .footer-2 p {
+        padding: 10px;
+    }
+
+    .clock {
+        color: #898989 !important;
+    }
+
+    .clock:before {
+        content: '';
+        width: 15px;
+        height: 15px;
+        display: inline-block;
+        background-image: url('../img/clock.png');
+        float: left;
+        background-repeat: no-repeat;
+        padding-left: 5px;
+    }
+
+    .local:before, .emailico:before, .telefoneico:before {
+        content: '';
+        width: 17px;
+        height: 24px;
+        display: inline-block;
+        float: left;
+        background-repeat: no-repeat;
+        padding-left: 5px;
+    }
+
+    .local:before {
+        background-image: url('../img/local.png');
+    }
+
+    .emailico:before {
+        background-image: url('../img/emailico.png');
+    }
+
+    .telefoneico:before {
+        background-image: url('../img/telefoneico.png');
+    }
+
     .form-group {
-      margin-bottom: 15px;
+        margin-bottom: 15px;
     }
+
     .form-group label {
-      display: block;
-      margin-bottom: 5px;
+        display: block;
+        margin-bottom: 5px;
     }
-    .form-group input, .form-group select {
-      width: 100%;
-      padding: 8px;
-      box-sizing: border-box;
+
+    .form-group input {
+        width: 100%;
+        padding: 8px;
+        box-sizing: border-box;
     }
+
     button {
-      background-color: #00bac6;
-      color: white;
-      border: none;
-      padding: 10px 20px;
-      cursor: pointer;
+        background-color: #00bac6;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        cursor: pointer;
     }
+
     button:hover {
-      background-color: #009aa6;
+        background-color: #009aa6;
     }
+
     main h2 {
-      text-align: center;
+        text-align: center;
     }
+
     main form {
-      max-width: 400px;
-      margin: 0 auto;
+        max-width: 400px;
+        margin: 0 auto;
     }
   </style>
   <script>
@@ -132,7 +377,7 @@
     <main>
       <div class="header-1">
         <div class="logo">
-          <img src="images/logo.png">
+          <img src="images/3.png">
         </div>
       </div>
     </main>
@@ -146,9 +391,6 @@
             </li>
             <li>
               <a href="tickets.html">Bilhetes</a>
-            </li>
-            <li>
-              <a href="">Contact Us</a>
             </li>
             <li>
               <a href="login.html">Login</a>
@@ -165,10 +407,12 @@
       <div class="form-group">
         <label for="event">Evento:</label>
         <select id="event" name="event">
-          <option>Evento 1</option>
-          <option>Evento 2</option>
-          <option>Evento 3</option>
-          <option>Evento 4</option>
+          <option>Travis Scott</option>
+          <option>MEO Marés Vivas</option>
+          <option>Matue</option>
+          <option>Taylor Swift</option>
+          <option>Van Zee</option>
+          <option>The Weeknd</option>
         </select>
       </div>
       <div class="form-group">
@@ -185,6 +429,15 @@
       </div>
       <button type="submit">Comprar</button>
     </form>
+    <footer>
+    <div class="col-100 footer-2">
+        <div class="content">
+            <p><b>Qualquer problema, não hesite em nos contactar</b></p>
+            <p><strong>Número telefónico:</strong> +351 911000172</p>
+            <p><strong>Email:</strong> GFTickets@gmail.com</p>
+        </div>
+    </div>
+    </footer>
   </main>
   <script src="js/main.js"></script>
 </body>
