--- a/index1.html
+++ b/index1.html
@@ -272,7 +272,9 @@
     </div>
         
     </footer>
-    <script type="text/javascript" src="./js/main.js"></script>
+    <script type="text/javascript" src="./scripts/login.js"></script>
+    <script type="text/javascript" src="./scripts/register.js"></script>
+    <script type="text/javascript" src="./scripts/purchase.js"></script>
 </body>
 </html>
 
