--- a/register.html
+++ b/register.html
@@ -186,7 +186,7 @@
     </div>      
     </footer>
   </main>
-  <script src="./Guiao-w0/scripts/main.js"></script>
+  <script type="text/javascript" src="./scripts/login.js"></script>
 </body>
 </html>
 
